CSS: Fixed wrong height of GUISwitch

--- a/src/stylesheets/gui/switch.css
+++ b/src/stylesheets/gui/switch.css
@@ -6,7 +6,7 @@
   position : relative;
   display : inline-block;
   min-width : 50px;
-  min-height : 24px;
+  min-height : 22px;
 }
 
 .GUISwitch input {
